--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.14.5",
+    "t1-pruebas-de-software-frontend": "file:",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
